--- a/resources/nginx-supervisor.conf
+++ b/resources/nginx-supervisor.conf
@@ -1,7 +1,7 @@
 [program:nginx]
 priority=30
 directory=/web
-command=nginx -c /etc/nginx/nginx.conf
+command=/usr/sbin/nginx
 user=root
 autostart=true
 autorestart=true
@@ -9,3 +9,5 @@ stopsignal=QUIT
 stdout_logfile=/var/log/nginx.log
 redirect_stderr=true
 stopasgroup=true
+stdout_events_enabled=true
+stderr_events_enabled=true
